--- a/cuns.css
+++ b/cuns.css
@@ -3,18 +3,36 @@
     text-decoration-line: none;
     color:black
 }
+
+body{
+    font-family: InfinitySans-RegularA1;
+}
 .mainbar{
     margin-left: 40px;
     margin-right: 40px;
     align-items: center;
     display: flex;
     justify-content: space-between;
-
 }
 
 .impot{
     display: flex;
+    justify-content:space-between;
+    align-items: flex-start;
     margin-top: 10vh;
+}
+
+.youtu{
+    width:700px;
+    height:600px;
+    margin-right: 60vh;
+}
+
+div iframe{
+    width: 75%;
+    height: 100vh;
+    margin-right : 10vh;
+    padding: 10px;
 }
 
 .mainbar a:hover{
@@ -22,7 +40,7 @@
     -moz-transform: scale(1.6,1.6);
     -o-transform: scale(1.6,1.6);
     -ms-transform: scale(1.6,1.6);
-    transform: scale(1.6,1.6);
+    -transform: scale(1.6,1.6);
 }
 
 .menubar a:hover{
@@ -33,23 +51,37 @@
 .menubar{
     margin-right: 40px;
     display: flex;
-    justify-content: ;
+    justify-content:stretch;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     list-style-type: none;
-    font-size: 22px;
+    font-size: 20px;
     font-style: bold;
     color: #161414;
     }
 
 
 li{
+    display: flex;
+    width: 20vh;
+    border-style: solid;
+    border-width: 0 0 4px 8px;
+    word-break: break-all;
     color: lightgrey;
     font-weight: 900;
     padding : 10px;
     margin: 20px;
-    border-radius: 10px;
-    background-color: #686767;
+    border-radius: 1px;
+    border-color: #686767;
+    align-items: center;
 }
+
+@font-face {
+    font-family: 'InfinitySans-RegularA1';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-RegularA1.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
