--- a/cuns.css
+++ b/cuns.css
@@ -8,31 +8,32 @@ body{
     font-family: InfinitySans-RegularA1;
 }
 .mainbar{
-    margin-left: 40px;
-    margin-right: 40px;
+    border-width: 2px;
+    border-color: rgb(59, 135, 233);
+    border-style: solid;
+    padding: 0px 30px 0px 30px;
     align-items: center;
     display: flex;
     justify-content: space-between;
 }
 
 .impot{
-    display: flex;
-    justify-content:space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 35vh 1fr;
     margin-top: 10vh;
 }
 
-.youtu{
-    width:700px;
-    height:600px;
-    margin-right: 60vh;
+#youtu{
+    width:50vh;
+    height:50vh;
+    margin: ;
 }
 
-div iframe{
-    width: 75%;
-    height: 100vh;
-    margin-right : 10vh;
-    padding: 10px;
+.impot iframe{
+    width: 90%;
+    height: 90vh;
+    margin-right : 7vh;
+    padding: 20px;
 }
 
 .mainbar a:hover{
@@ -44,11 +45,14 @@ div iframe{
 }
 
 .menubar a:hover{
-    color: lightyellow;
-    padding: 20px;
+    color: rgb(59, 135, 233);
+    font-size: 1.5em;
 }
 
 .menubar{
+    border-width: 0 1px 0 0;
+    border-color: rgb(58, 58, 58);
+    border-style: solid;
     margin-right: 40px;
     display: flex;
     justify-content:stretch;
@@ -60,6 +64,10 @@ div iframe{
     color: #161414;
     }
 
+li:active{
+    border-width: 0 0 4px 16px;
+    border-color: royalblue;
+}
 
 li{
     display: flex;
